--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,142 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap");
+
+:root {
+  --mfont: "Nunito Sans", sans-serif;
+  --lblue: #151c60;
+  --lgreen: #a1ff64;
+  --errorcolor: #b00020;
+  --dlblue: #283186;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/*Loading Animation*/
+@keyframes fadeoutin {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes orbit {
+  0% {
+    transform: rotate(225deg);
+    opacity: 1;
+    animation-timing-function: ease-out;
+  }
+  7% {
+    transform: rotate(345deg);
+    animation-timing-function: linear;
+  }
+  30% {
+    transform: rotate(455deg);
+    animation-timing-function: ease-in-out;
+  }
+  39% {
+    transform: rotate(690deg);
+    animation-timing-function: linear;
+  }
+  70% {
+    transform: rotate(815deg);
+    opacity: 1;
+    animation-timing-function: ease-out;
+  }
+  75% {
+    transform: rotate(945deg);
+    animation-timing-function: ease-out;
+  }
+  76% {
+    transform: rotate(945deg);
+    opacity: 0;
+  }
+  100% {
+    transform: rotate(945deg);
+    opacity: 0;
+  }
+}
+/**/
+
+@keyframes animateWave {
+  0% {
+    background-position-x: 1000px;
+  }
+
+  50% {
+    background-position-x: 500px;
+  }
+  100% {
+    background-position-x: 0px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+@keyframes animateWave02 {
+  0% {
+    background-position-x: 0px;
+  }
+
+  100% {
+    background-position-x: 1000px;
+  }
+}
+
+body {
+  background: linear-gradient(90deg, #010b40, #151c60);
+}
+.item-container {
+  color: red;
+
+  font-weight: 900;
+  font-family: var(--mfont);
+  font-size: 2rem;
+  z-index: 6;
+  position: absolute;
+}
+.option-icon {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-right: 1em;
+  margin-top: 1.75em;
+  position: absolute;
+  right: 0;
 }
-
-.App-link {
-  color: #61dafb;
+.option-icon img {
+  width: 2.5em;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+#cartTotalQuantity {
+  position: absolute;
+  font-family: var(--mfont);
+  font-weight: 800;
+  top: 0.8em;
+  left: 0.95em;
+}
+.content-page {
+  height: 100vh;
+}
+.hide {
+  opacity: 0;
+}
+@media (max-height: 700px) {
+  #styled-items-container {
+    top: 48%;
+    width: 20em;
   }
-  to {
-    transform: rotate(360deg);
+  #styled-items-container img {
+    width: 80%;
+  }
+  .item-content {
+    margin-top: 2em;
+  }
+  #product-image {
+    width: 70%;
   }
 }
